--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@
   --female: pink;
   --genderless: rgb(109, 250, 166);
 
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
