--- a/src/app.css
+++ b/src/app.css
@@ -20,6 +20,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -32,8 +33,8 @@
 
 body,
 html {
-  min-height: 100dvh;
   min-height: 100vh;
+  min-height: 100dvh;
 }
 
 a {
@@ -46,4 +47,35 @@ a {
   flex-direction: column;
   row-gap: 3rem;
   overflow: hidden;
+  min-height: 100vh;
+  min-height: 100dvh;
+}
+
+code {
+  font-size: 0.9rem;
+  font-weight: 700;
+}
+
+.male {
+  color: var(--male);
+}
+
+.female {
+  color: var(--female);
+}
+
+.genderless {
+  color: var(--genderless);
+}
+
+.dead {
+  color: var(--dead);
+}
+
+.alive {
+  color: var(--alive);
+}
+
+.unknown {
+  color: var(--unknown);
 }
